# msft-gh-lab

./: .gitignore  PREREQUISITES.md  README.md  azure.yaml  package-lock.json  pytest.ini  run-tests-clean.sh  run-tests.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/agents/: playwright-tester.agent.md
.github/instructions/: playwright-python.instructions.md
.github/task-0/: copilot-instructions.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/src/: main.py  schemas.py
backend/src/db/: __init__.py  cosmos.py
backend/src/repositories/: __init__.py  in_memory.py
frontend/: Dockerfile  nginx.conf.template  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  types.ts
frontend/src/components/: DeviceForm.tsx  DeviceList.tsx
infra/: main.bicep  main.parameters.json
infra/core/data/: cosmos.bicep
infra/core/host/: container-app.bicep  container-apps-environment.bicep  container-registry.bicep
infra/hooks/: preprovision.sh
plan/: local-storage.md
tasks/: TASK_0.md  TASK_1.md  TASK_2.md
tests/: README.md  __init__.py  conftest.py  requirements.txt  test_api_integration.py  test_device_management.py  test_error_handling.py  test_responsive_design.py
tests/e2e/: test_devices.py
